set(FLEX_BISON_ZIP ${CMAKE_BINARY_DIR}/../win_flex_bison.zip)
set(FLEX_BISON_DIR ${CMAKE_BINARY_DIR}/../win_flex_bison)
if(NOT EXISTS ${FLEX_BISON_ZIP})
	# file(DOWNLOAD "https://jaist.dl.sourceforge.net/project/winflexbison/win_flex_bison-latest.zip" ${CMAKE_BINARY_DIR}/fb.zip)
	file(DOWNLOAD "https://github.com/lexxmark/winflexbison/releases/download/v2.5.25/win_flex_bison-2.5.25.zip" ${FLEX_BISON_ZIP})
	endif()
if(NOT EXISTS ${FLEX_BISON_DIR})
	file(ARCHIVE_EXTRACT INPUT ${FLEX_BISON_ZIP} DESTINATION ${FLEX_BISON_DIR})
endif()

if(WIN32)
set(ENV{PATH} "${FLEX_BISON_DIR};$ENV{PATH}")
else()
set(ENV{PATH} "${FLEX_BISON_DIR}:$ENV{PATH}")
endif()
find_package(BISON REQUIRED)
find_package(FLEX REQUIRED)
router_directories()